# int_array_reverso

./: CMakeLists.txt  README.md
src/: array_reverse.c
